test/should_pass/basic_060.grg
actions basic_060 using basic_model_002;

rule r {
	pattern {
		x : A;
		y : B;
		z : C;
	}
	replace {
		eval {
			y.ib = 42;
		}
	}
}

