test/should_fail/enum_004.grg
actions enum_004 using enum_model_001;

rule r {
	pattern {
		a:A -b:B-> a;
	}
	modify {
		eval {
			a.e = 42;
		}
	}
}

